# git-lookout

./: .gitignore  DOLT_REMOTE.md  README.md  manifest  pyproject.toml
.beads/: .beads-credential-key  interactions.jsonl  metadata.json  push-state.json
docs/: build-plan.md  pitch.md  proactive-conflict-detection.md  spec.md
git_lookout/: handlers.py  reporter.py  server.py  sweep.py
git_lookout/core/: git_manager.py  models.py  pipeline.py
git_lookout/github/: auth.py  client.py
git_lookout/storage/: queries.py  schema.py
git_lookout/webhook/: events.py  signature.py
tests/: test_api_integration.py  test_reporter.py  test_sweep.py  test_sweep_integration.py  test_webhook_integration.py
tests/core/: test_file_overlap.py  test_git_manager.py  test_integration.py  test_merge_tree.py  test_models.py  test_pipeline.py
tests/github/: conftest.py  test_auth.py  test_client.py
tests/storage/: test_queries.py  test_schema.py
tests/webhook/: test_events.py  test_signature.py
