[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "git-lookout"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pyjwt[crypto]>=2.8",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[project.scripts]
git-lookout = "git_lookout.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
